--- a/settings.html
+++ b/settings.html
@@ -140,7 +140,7 @@
   <ul class="govuk-tabs__list">
     <li class="govuk-tabs__list-item">
       <a class="govuk-tabs__tab govuk-tabs__tab--selected" href="#git">
-        Git settings
+        Github settings
       </a>
     </li>
     <li class="govuk-tabs__list-item">
@@ -172,16 +172,25 @@
     </div>
     <div class="govuk-form-group">
       <label class="govuk-label" for="token">
-        Github token
+        Github access token
       </label>
+      <!-- <span class="govuk-hint">
+        <a id="tokenHowTo" href="#">How to create an access token</a>
+      </span> -->
       <input class="govuk-input" id="token" name="token" type="text">
     </div>
     <button type="submit" class="govuk-button" id="saveGit">
       Save
     </button>
+
+    <div class="govuk-inset-text">
+      <a id="tokenHowTo" href="#">How to create a Github access token</a>
+    </div>
   </section>
   <section class="govuk-tabs__panel govuk-tabs__panel--hidden" id="updates">
-    <h2 class="govuk-heading-l">Updates</h2>
+    <h2 class="govuk-heading-l govuk-visually-hidden">Updates</h2>
+
+    <p><a class="govuk-link" href="#" onclick="app.updateEditor()">Update editor</a></p>
 
 
 
@@ -220,6 +229,11 @@
           git[setting] = $setting.value || ''
         })
         app.store.set('git', git)
+      })
+
+      const $tokenHowTo = document.getElementById('tokenHowTo')
+      $tokenHowTo.addEventListener('click', () => {
+        app.openExternal('https://help.github.com/articles/creating-a-personal-access-token-for-the-command-line/')
       })
       
     </script>
