Add request and menu handling

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </tr>
   </tbody>
 </table>
- <p id="servicesInstructions">You don’t have any forms yet. <a class="govuk-link" href="add.html">Add an existing form</a> or <a class="govuk-link" href="create.html">create one</a></p>
+ <p id="servicesInstructions">You don’t have any forms yet. <a class="govuk-link" href="create.html">Create a new form</a> or <a class="govuk-link" href="add.html">add an existing one</a></p>
     
 <!-- CONTENTS END -->
 
