--- a/settings.html
+++ b/settings.html
@@ -192,6 +192,7 @@
 
     <p><a class="govuk-link" href="#" onclick="app.updateEditor()">Update editor</a></p>
 
+    <p><a class="govuk-link" href="#" onclick="app.reinstallEditor()">Reinstall editor</a></p>
 
 
   </section>
