Move notification script to notification.js

--- a/create.html
+++ b/create.html
@@ -131,6 +131,9 @@
       <label class="govuk-label" for="formname">
         Form name
       </label>
+      <span class="govuk-hint">
+        The name should contain no spaces
+      </span>
       <input class="govuk-input" id="formname" name="formname" type="text">
     </div>
     <div class="govuk-form-group createrepo-group">
