--- a/add.html
+++ b/add.html
@@ -156,13 +156,41 @@
 <script src="assets/govuk-frontend-design-system.min.js"></script>
     <script>
       const {app} = require('./app.js')
+      const {git} = app
+      const path = require('path')
+      const ipc = require('electron-better-ipc')
+
+      const addService = async (serviceName) => {
+        const serviceStub = serviceName.replace(/.*\//, '').replace(/\.git$/, '')
+        app.notify(`Checking ${serviceStub}`, {phase: 'Add existing form'})
+        const addServicePath = path.join(app.paths.services, serviceStub)
+        if (app.utils.pathExists.sync(addServicePath)) {
+          return
+        }
+        app.notify(`Adding ${serviceStub}`, {phase: 'Add existing form'})
+        const dir = addServicePath
+        let url = serviceName
+        if (!serviceName.includes('/')) {
+          url = `https://github.com/ministryofjustice/${serviceName}`
+        }
+        await git.clone({
+          dir,
+          url,
+          singleBranch: true,
+          depth: 1
+        })
+        // await ipc.callMain('setService', {name:serviceStub})
+        app.setService(serviceStub)
+        app.notify(`Added ${serviceStub}`, {dismiss: true})
+      }
 
       const $addForm = document.getElementById('addForm')
       $addForm.addEventListener('click', () => {
         const $repoaddress = document.getElementById('repoaddress')
         const repoaddress = $repoaddress.value
         if (repoaddress) {
-          app.addService(repoaddress).then(() => {
+          
+          addService(repoaddress).then(() => {
             document.location.href = 'index.html'
           }).catch(e => console.log(e))
         }
