Moved installation methods to installation.js

--- a/notification.html
+++ b/notification.html
@@ -73,8 +73,8 @@
     <img src="assets/images/govuk-crown-animated.gif" alt="">
     </div>
     <div class="info govuk-body-m">
-      <h2 id="consoleInstallerPhase" class="govuk-heading-l">Phase</h2>
-      <p id="consoleInstallerMessage" class="govuk-body-l">Hello</p>
+      <h2 id="consoleInstallerPhase" class="govuk-heading-l">Setting up editor</h2>
+      <p id="consoleInstallerMessage" class="govuk-body-l">Installing editor</p>
     </div>
   </div>
   </div>
