--- a/settings.html
+++ b/settings.html
@@ -174,9 +174,9 @@
       <label class="govuk-label" for="token">
         Github access token
       </label>
-      <!-- <span class="govuk-hint">
-        <a id="tokenHowTo" href="#">How to create an access token</a>
-      </span> -->
+      <span class="govuk-hint">
+        
+      </span>
       <input class="govuk-input" id="token" name="token" type="text">
     </div>
     <button type="submit" class="govuk-button" id="saveGit">
@@ -184,6 +184,8 @@
     </button>
 
     <div class="govuk-inset-text">
+      <h3>About the Github access token</h3>
+      <p>Your access token should be created with the <b>public_repo</b> scope.</p>
       <a id="tokenHowTo" href="#">How to create a Github access token</a>
     </div>
   </section>
